# Food-Recognition-and-Leftover-Estimation

./: CMakeLists.txt  Food-Recognition-and-Leftover-Estimation.h  README.md
Food_leftover_dataset/: food_categories.txt
old code/: old_Mask.hpp  old_main.cpp
src/: BoundingBox.cpp  BoundingBox.hpp  BoundingBoxes.cpp  BoundingBoxes.hpp  Mask.cpp  Mask.hpp  Metrics.cpp  Metrics.hpp  Segmentation.cpp  Segmentation.hpp  main.cpp  old_main.cpp
src/Python/: CLIP_bread.py  CLIP_interface.py  prova.py
